--- a/src/music/2010s.rst
+++ b/src/music/2010s.rst
@@ -28,11 +28,128 @@ typically get labeled as contemporary classical. The rest of the decade, 75% of
 the live music I saw was the local symphony orchestra, This was where "I got
 old", but where exactly did it happen?
 
+2017
+----
+In 2017 I made a specific effort to pay more attention to modern music.
+Admittedly, I wasn't trying very hard and my efforts were mostly related to
+using the discovery features of Spotify. This did yield some fruit (particularly
+in the R&B renaissance that was going on) but this year is still mostly artists
+from the indie boom that I had been following for years.
+
+.. image:: images/2017.jpg
+  :width: 900
+  :alt: My favorite albums from 2017
+
+.. raw:: html
+
+  <iframe
+  src="https://open.spotify.com/embed/playlist/0aoSZPgfa910GZKWAPnrAa?theme=0" 
+  width="100%" height="380" frameBorder="0" allowtransparency="true" 
+  allow="encrypted-media"></iframe>
+
+- *Unplugged* by **A-ha** - This is certainly the outlier here, a very 90s kind
+  of performance from a very 80s band. I had heard for years about how A-ha were
+  way more popular in Europe and how they were much better than the one hit
+  wonder they were here. The Spotify algorithm decided I needed to her this, and
+  I'm glad it did. The understated arrangements really show off how great their
+  songwriting is. I'm a huge fan now.
+
+- *Native Invader* by **Tori Amos** - After her previous record I had assumed
+  that Tori was going to make much smaller and more subtle music in her later
+  career. This record certainly proved me wrong on that. A return to her late
+  90s glory years, this album is a very big sounding, and at times straight up
+  rocking. This isn't *Choirgirl*, but it isn't too far from the best of
+  *Venus*. *Geraldines* scared me a little bit because Tori was starting to
+  sound a bit older. This record makes it clear there are many exciting records
+  yet to come.
+
+- *Dedicated to Bobby Jameson* by **Ariel Pink** - Yes it breaks my heart that
+  he has been outed as a terrible person, and I can't imagine I'll be keeping up
+  with his career going forward. That said, these records are stunning works of
+  outsider brilliance. If I'm going to keep records by people like Michael
+  Jackson on this list, there is room for the work other deeply flawed artists.
+
+- *Lust for Life* by **Lana Del Rey** - It is her weakest record thus far, but
+  still among my favorites. The whole thing is a little to mid tempo monotonous,
+  but there are still some stunners here, including the title track. The
+  outstanding production values of the record really puts this one over the top.
+
+- *Dirty Projectors* by **Dirty Projectors** - While this project existed before
+  and will continue after the musical (and romantic) partnership of Dave
+  Longstreth and Amber Coffman, I doubt I will ever enjoy the records made by
+  those other incarnations nearly as much. The exception is this Longstreth solo
+  effort that serves as a document of the dissolution of that central
+  partnership, and a compelling bookend to an amazing run of records.
+
+- *Jardín* by **Gabriel Garzón-Montano** - 2017 was the year I discovered what
+  is now called "Alternative R&B". An ambiguous genre, to me it feels like a
+  return to what Stevie Wonder was attempting to to in the mid-70s. This record
+  especially feels like the kind of thing Stevie would have come up with if he
+  had been born in the 90s.
+
+- *Painted Ruins* by **Grizzly Bear** - Some bands are constantly changing and
+  trying new sounds, others like Grizzy Bear, started with a fully developed
+  sound and have been gradually perfecting it. I'm curious how many more albums
+  of this same general formula I will tolerate. "Losing All Sense" is getting
+  pretty close to the ultimate implementation of this kind of music.
+
+- *Choir of the Mind* by **Emily Haines** - *Metric* is a fine band, but Haines
+  solo work is on a completely different level. We seem to only get one classic
+  album a decade from her, but maybe that is why the level of songcraft is so
+  high. A gorgeous set of songs mostly about the artist and her piano with just
+  enough atmospheric electronics and vocal overdubbing to create a pleasant
+  warmth.
+  
+- *Melodrama* by **Lorde** - This album is amazing, but it fills me with
+  anxiety. I greatly fear the machinations of mainstream pop music will get
+  their hooks into Lorde and turn her into a Billie Eilish style commercial
+  interest instead of her far more interesting authentic self. This album put
+  her much more on the **Kate Bush** path of a prodigy bucking prevailing trends
+  and pushing the boundaries of modern pop. Will this be allowed to continue?
+
+- *Sleep Well Beast* by **The National** - I'm an aging indie bro, so of
+  course I love these guys. There is just enough here to connect me to the band
+  I have loved over the last 10 years. Somehow though, it is just gut enough in
+  a way that makes it feel like my jumping off point.
+
+- *Kid Kruschev* by **Sleigh Bells** - In the 2010s there were many buzz
+  bands that got way more attention and credit than they probably deserved early
+  in their careers. Some of them have developed into stunning artists that
+  probably are now not getting nearly enough credit. Chief among them is Sleigh
+  Bells, who have turned their semi-obnoxious combination of electronics, guitar
+  riffs, and belting into art rock gold. "Rainmaker" might be the best ever
+  invocation of the "Ashely's Roachclip" break, and that is saying something.
+
+- *Planetarium* by **Sufjan Stevens**, **Nico Muhly**, **Bryce Dessner**, and
+  **James McAlister** - I saw a workshop performance of this at the 2012 Music
+  Now festival. I didn't care for it very much then, and the finished product
+  feels way different. I'm fairly certain that Sufjan pretty much wrapped this
+  one up on his own because in the end we got something very much in line with
+  *the BQE* and *Age of Adz*. I'm really pleased that the weirdest form of
+  electo-Sufjan got one last time to shine.
+
+- *Fin* by **Syd** - A great piece of minimalist "alternative R&B". I want
+  dozens more albums in this genre.
+
+- *Drunk* by **Thundercat** - Is this the new jazz fusion? I hope so. Jazz and
+  fusion have become genres for boring white people rehashing the past. This
+  combination of bass virtuosity and funky sounds is super compelling. Bonus
+  points for the effective use of Kenny Loggins.
+
+- *To the Bone* by **Steven Wilson** - I'm fascinated how Wilson is almost
+  repeating the same career trajectory of his band **Porcupine Tree** again as a
+  solo artist. In both cases he started off as a prog rock revivalist. The
+  second phase, which for his solo career commences with this record, is a
+  lighter alt rock sound. Perhaps the return to progressive metal concept albums
+  is just around the corner? Wilson has mixed in some killer pop songs over the
+  years, but "Permanating" is the finest yet.
+
 2018
 ----
 I think the best summary of this year is that all of these albums, except for
 two were by artists that were among my favorites going into the year. Those two
-new artists were both discovered on NPRs All Things Considered. 
+new artists were both discovered on NPRs All Things Considered. I may have been
+a bit out of touch with popular music.
 
 .. image:: images/2018.jpg
   :width: 900
@@ -42,7 +159,7 @@ new artists were both discovered on NPRs All Things Considered.
 
   <iframe
   src="https://open.spotify.com/embed/playlist/4pSrzHRA9VaFcj48PgrE1R?theme=0" 
-  width="100%" height="80" frameBorder="0" allowtransparency="true" 
+  width="100%" height="380" frameBorder="0" allowtransparency="true" 
   allow="encrypted-media"></iframe>
 
 - *Tranquility Base Hotel + Casino* by **Arctic Monkeys** - Of all the bands to
@@ -133,7 +250,7 @@ thinking about the project I am working on here.
 
   <iframe
   src="https://open.spotify.com/embed/playlist/3J3ZDe6pnhcNWbCEHKsY1m?theme=0" 
-  width="100%" height="80" frameBorder="0" allowtransparency="true" 
+  width="100%" height="380" frameBorder="0" allowtransparency="true" 
   allow="encrypted-media"></iframe>
 
 - *Norman Fucking Rockwell* by **Lana Del Rey** - This was the only album that I
