cleaned up life music intro

--- a/src/music/2010s.rst
+++ b/src/music/2010s.rst
@@ -14,14 +14,16 @@ and vinyl records bought from merch stands at these shows are now staples of my
 wardrobe and album collection today.
 
 When the decade closed, mainstream pop from the major labels had returned as the
-dominant force in the music scene. It had never really went away, it was more
+dominant force in the music scene. This kind of mainstream music had never
+really went away, it was more
 that independent music receded to the shadows again. I have nothing against
 mainstream pop, as my lists for earlier decades show. My objections mostly have
 to do with the impacts of how modern pop music is made. Today, your average pop
 single is written and produced by a committee of dozens. When that many folks
-contribute to the creative process it has the effect of sanding every edge off of the track by the time
-it reaches the finish line. Any remaining distinguishing characteristic was so
-intentionally created, it can't help but feel contrived. I haven't been to a
+contribute to the creative process it has the effect of sanding every edge off 
+of the track by the time
+it reaches the finish line. Any remaining distinguishing characteristics are so
+intentionally created, that it can't help but feel contrived. I haven't been to a
 music festival since 2013. That last one was the inaugural "Crossing Brooklyn
 Ferry", a combination of the most high brow indie combined with artists that
 typically get labeled as contemporary classical. The rest of the decade, 75% of
@@ -31,10 +33,10 @@ old", but where exactly did it happen?
 2017
 ----
 In 2017 I made a specific effort to pay more attention to modern music.
-Admittedly, I wasn't trying very hard and my efforts were mostly related to
+Admittedly, I wasn't trying very hard and my efforts were mostly about
 using the discovery features of Spotify. This did yield some fruit (particularly
-in the R&B renaissance that was going on) but this year is still mostly artists
-from the indie boom that I had been following for years.
+in the R&B renaissance that was going on) but this year is still mostly
+comprised of artists from the early century indie boom that I had been following for years.
 
 .. image:: images/2017.jpg
   :width: 900
