a few more years

--- a/src/music/2010s.rst
+++ b/src/music/2010s.rst
@@ -35,6 +35,188 @@ typically get labeled as contemporary classical. The rest of the decade, 75% of
 the live music I saw was the local symphony orchestra, This was where "I got
 old", but where exactly did it happen?
 
+2015
+----
+I turned 35 in 2015, which sounded very old at the time. My relationship with
+music was also making me feel old. I saw three bands this year: The Psychedelic
+Furs, The Church, and The Chameleons. It was the year of 80s nostalgia I guess.
+I was very much treading musical water, keeping in touch with the artists that
+hadn't let me down in the past. That ended up working out really well in 2015,
+as several of my favorites released their best work.
+
+.. image:: images/2015.jpg
+  :width: 900
+  :alt: My favorite albums from 2015
+
+.. raw:: html
+
+  <iframe
+  src="https://open.spotify.com/embed/playlist/55DcWRgBQciL97k3bsftmi?theme=0" 
+  width="100%" height="80" frameBorder="0" allowtransparency="true" 
+  allow="encrypted-media"></iframe>
+
+- *Depression Cherry* by **Beach House** - This was when the world caught up with
+  what I already knew, these guys were one of the best bands currently working.
+  It is a little strange that dream pop made by two people with fairly minimal
+  instrumentation and fairly consistent production techniques has had such
+  staying power. This is great record, and "Beyond Love" is my favorite song of
+  theirs.
+  
+- *Thank Your Lucky Stars* by **Beach House** - Now, releasing two records after
+  one another was some serious flexing. In my opinion, this one is even a little
+  bit better. It certainly is a bit brighter in a way that I like.
+
+- *Girls in Peacetime Want to Dance* by **Belle and Sebastian** - Very solid an
+  enjoyable, but the kind of record that made me wonder how much more they could
+  milk the sound they had been working for the last decade plus. Sarah Marin's
+  vocal contributions continue to carry the band a bit at this point.
+
+- *Honeymoon* by **Lana Del Rey** - A very mellow left turn for Lana, this
+  wasn't perfect by any means, but it was an important step in a different
+  direction that she still is on.
+
+- *Meliora* by **Ghost** - This is the record where the formula came together in
+  a big way. It is amazing how something so satirical can be such seriously
+  great music. "He Is" is such a beautiful and stunningly produced mockery of
+  christian rock.
+
+- *Have You In My Wilderness* by **Julia Holter** - I have had a strange
+  relationship with this record. I was exposed to the song "silhouette" by
+  Spotify radio soon after it came out and loved it. I listened to only that
+  song for years and never sought out the record. When I finally heard the whole
+  album and loved it, I never checked out any of her other releases. I don't
+  know why I am approaching this artist so cautiously. This is the kind of
+  conservatory trained musician making complicated but highly melodic music
+  thing that I love.
+
+- *Bones* by **Son Lux** - NPR's favorite son recruits some permanent members
+  and becomes a real band. It was the best thing to ever happen to this project.
+  This is nerd rock at its finest. I saw them at the Warhol museum on the tour
+  after this record, and that was the right kind of place to see this
+  adventurous art rock. A very strong concept record, this one to listen to from
+  beginning to end. Still my favorite of theirs.
+
+- *Carrie & Lowell* by **Sufjan Stevens** - I think there is a prevailing
+  opinion that this is Sufjan's finest work. I'm glad he made this record so
+  that the general public can understand the brilliance of this man, but I'm
+  far happier that he immediately returned to making the weird stuff I like way
+  more. Still a fine folk record with that Sufjan magic, but a bit too
+  conservative to stand with his best work.
+
+- *Multi-Love* by **Unknown Mortal Orchestra** - They finally got it all to work
+  together here. The delightfully funky electronic sound they occasionally got
+  to work on their first two releases comes into focus here. Such a great
+  sounding production as well, even though I'm pretty sure this is an analog
+  home recording made in that little studio on the cover.
+
+- *Hand Cannot Erase* by **Steven Wilson** - A mellow prog rock concept record
+  about an isolated person dying alone. Obviously intended to be sad and
+  haunting, but also exceptionally beautiful. Feels like a massive upgrade to
+  the Stupid Dream/Lightbulb Sun era **Porcupine Tree**.
+
+- *Vespers for a New Dark Age* by **Victoire** and **Missy Mazzoli**. The first
+  Victoire record was a classically trained composer creating a rock band to
+  make a very unusual kind of prog rock. This album is the composer using that
+  band to play a contemporary classical work. In a way this albums felt like the
+  end of "indie classical" and while I liked to scoff at the idea of a genre, it
+  was a real and compelling thing. The remix of "A Thousand Tongues" by the very
+  much not a classical composer **Lorna Dune** feels like the last glorious
+  moments of the spirit of classical music nerds forming rock bands.
+
+- *The Epic* by **Kamasi Washington** - This is the most recent of my favorite
+  albums that I do not own on vinyl, but easily could if I wanted to. I think it
+  says a lot. I really like this triple album of modern jazz fusion, but I like
+  his next record even more. There is nothing here that makes me need to own
+  another quite epic release on vinyl, but I spin this one on Spotify often. The
+  texture of this music is exceptional.
+
+
+2016
+----
+A significant portion of the music from this year was actually discovered during
+my attempt to reconnect with pop music in the following year. The other albums
+are all from established artists that I had be following for years. I'll
+remember this year mostly for the passing of three of my favorite artists:
+George Michael, Prince, and David Bowie.
+
+.. image:: images/2016.jpg
+  :width: 900
+  :alt: My favorite albums from 2016
+
+.. raw:: html
+  
+  <iframe
+  src="https://open.spotify.com/embed/playlist/0UKeYHGoGOzLvhyuxxXSCc?theme=0" 
+  width="100%" height="80" frameBorder="0" allowtransparency="true" 
+  allow="encrypted-media"></iframe>
+
+- *Blackstar* by **David Bowie** - It is difficult to think about this record
+  outside of the context in which it arrived. My pre-ordered copy showed up in the
+  mail two days after Bowie, my favorite musician had died. It was so mysterious
+  and exciting, but it was also the end of the story. Pop's ultimate performer had
+  one last grand statement on the world stage, the big exit. Experimenting with
+  new sounds until the very end, it is hard to imagine there will ever again be a
+  musician who is both this massively popular and  yet committed to pushing
+  the boundaries of pop music.
+
+- *Foreverland*  by **Divine Comedy** - In my opinion, this is the weakest of
+  the Divine Comedy records released to date, but it is still among my
+  favorites. Neil Hannon feels very content here, and I think it is reducing
+  some of the tension and contemplation that have made his previous work great.
+  I actually own two vinyl copies of this, since my first one is signed by the
+  artist, but I had to buy the reissue because Hannon's liner notes are that
+  good.
+  
+- *The Hope Six Demolition Project* by **PJ Harvey** - In 2016 we finally got
+  the PJ Harvey saxophone record we had been waiting for. This record somehow
+  feels like the capstone on what Polly has been up to for the last decade with
+  her younger voice and harder sound rejoining her contemplative, social justice
+  minded songwriting. I love the crazy aesthetic for this tour with Polly Jean
+  dressed up in feathers playing in a chorus of saxophones.
+
+- *King* by **We are KING** - This was the record that brought my attention back
+  to modern pop music. I have an annual tradition of watching the Grammy awards
+  ceremony. Most years I hate nearly everything, but I like to stay in touch
+  with what is going on in pop. I heard a snippet of "Red Eye" from this record
+  during the presentation of the award for the "Urban Contemporary Album of the
+  Year". This would put me on a path of exploration in what we now call
+  "Alternative R&B" that continues to today.
+
+- *X-Communicate* by **Kristin Kontrol** - Kristin Gundred is a masterful mimic
+  of the music of the past. Starting with her band **Dum Dum Girls** she
+  excelled of mining the past without sounding totally derivative. Her first
+  solo record manages to borrow liberally from late 80s Kate Bush, and 2010s
+  synth pop, while adding just enough to stand up totally on its own. I really
+  hope there will be another record from this project.
+
+- *I Had a Dream That You Were Mine* by **Hamilton Leithouser** and **Rostam** -
+  This record ended up sounding like the combination of **The Walkmen** and
+  **Vampire Weekend** that it seemed like it would be on paper. This is aging
+  hipster music done right.
+
+- *Mass Gothic* by **Mass Gothic** - In what was a big theme to my middle 2010s,
+  this album is some of my favorite artists of the previous decade moving on to
+  their next project. In this case, the husband/wife duo from **Hooray for
+  Earth** and **Zambri** teaming up to make some delightfully poppy noise rock.
+  "Every Night You've Got to Save Me" is a stunning single that shows off what
+  these underrated musicians can do.
+
+- *blond* by **Frank Ocean** - A stunning concept record by one of the best
+  artists working today. My vinyl copy of this record is an amazingly made
+  bootleg, because the real thing is worth over 400 bucks these days. Ocean
+  seems intent on only being so popular, almost choosing artistic relevance 
+  over fame. It is hard to argue with the results. "Nights" might be the best
+  song of the last 10 years.
+
+- *Tigarello* by **Phonte** and **Eric Robertson** - Nothing says where my head
+  is at these days than this album of rap songs about the bliss of  monogamy 
+  and settling down. Hip hop for rapidly approaching middle age. 
+
+- *Jessica Rabbit* by **Sleigh Bells** - These guys are making some great tunes
+  completely under the radar. I wish the hipsters that were buzzing about this
+  band at the start of the decade were still paying attention. This is some
+  surprisingly complex, rocking stuff.
+
 2017
 ----
 In 2017 I made a specific effort to pay more attention to modern music.
